Fixed body overflow

--- a/web/src/index.scss
+++ b/web/src/index.scss
@@ -9,4 +9,5 @@
 body {
     width: 100vw;
     height: 100%;
+    overflow: hidden;
 }
